--- a/configure.ac
+++ b/configure.ac
@@ -324,6 +324,7 @@ AC_CHECK_FUNCS(mkstemp)
 AC_CHECK_FUNCS(popen)
 AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(times)
+AC_CHECK_FUNCS(getpid)
 AC_FUNC_FSEEKO
 
 
