--- a/esl_config.h.in
+++ b/esl_config.h.in
@@ -67,6 +67,7 @@
 #undef HAVE_POPEN
 #undef HAVE_STRCASECMP
 #undef HAVE_TIMES
+#undef HAVE_GETPID
 #undef HAVE_FSEEKO
 
 /*****************************************************************
