--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -1,6 +1,8 @@
 # Makefile.in for Easel's miniapps
 # SVN $Id$
-SHELL = /bin/sh
+SHELL       = /bin/sh
+SUFFIXES    = 
+SUFFIXES    = .c .o
 
 ## Installation targets
 #
@@ -12,17 +14,16 @@ bindir      = @bindir@
 
 ## your compiler and compiler flags.
 #
-CC       = @CC@
-CFLAGS   = @CFLAGS@ @SIMD_CFLAGS@
-DEFS     = @DEFS@
-LDFLAGS  = @LDFLAGS@
-LIBS     = -leasel @LIBGSL@ @LIBS@ -lm
+CC        = @CC@
+CFLAGS    = @CFLAGS@
+LDFLAGS   = @LDFLAGS@
+SIMDFLAGS = @SIMD_CFLAGS@
+DEFS      = @DEFS@
+LIBS      = -leasel @LIBGSL@ @LIBS@ -lm
 
 ## where is Easel?
 #
-ESLLIBDIR = -L..
-ESLINCDIR = -I..
-
+ESLDIR    = ..
 
 ## list of the miniapps to compile.
 #
@@ -39,26 +40,37 @@ PROGS = esl-afetch\
 	esl-shuffle\
 	esl-weight
 
-## Targets defining how to make miniapp executables.
-#
-all: 	$(PROGS) 
 
-${PROGS}: @EXEC_DEPENDENCY@  ../libeasel.a
-	${CC} ${CFLAGS} ${DEFS} ${LDFLAGS} ${ESLLIBDIR} -o $@ $@.o ${OBJS} ${LIBS}
+all: 	
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	${MAKE} easel_progs
+
+dev:
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	${MAKE} easel_progs
+
+check:
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	${MAKE} easel_progs
+
+easel_progs: ${PROGS}
+
+${PROGS}: @EXEC_DEPENDENCY@  ${ESLDIR}/libeasel.a
+	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -L ${ESLDIR} -o $@ $@.o ${LIBS}
 
 .c.o:
-	${CC} ${CFLAGS} ${DEFS} ${ESLINCDIR} -c $<
+	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I ${ESLDIR} -c $<
 
 install:
 	cp ${PROGS} ${DESTDIR}${bindir}/
 
 clean:
-	-rm ${PROGS}
-	-rm *.o *~
-	-rm TAGS
+	-rm -f ${PROGS}
+	-rm -f *.o *~
+	-rm -f TAGS
 
 distclean:
-	make clean
+	${MAKE} clean
 	-rm -f ${PROGS}
 	-rm Makefile
 
