--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -18,100 +18,47 @@ MPILIBS  = @MPILIBS@
 AR      = @AR@ rcv
 RANLIB  = @RANLIB@
 
-ESLDIR = ..
+ESLDIR   = ../
+SQCLEVEL = 2
 
 PROGS = parse-t1\
 	dmatrix-t1\
 	dmatrix-t2\
 
-UNIT_TESTS = easel_utest\
-	alphabet_utest\
-	cluster_utest\
-	dirichlet_utest\
-	distance_utest\
-	dmatrix_utest\
-	exponential_utest\
-	fileparser_utest\
-	gamma_utest\
-	getopts_utest\
-	gumbel_utest\
-	histogram_utest\
-	hyperexp_utest\
-	keyhash_utest\
-	msa_utest\
-	msacluster_utest\
-	msaweight_utest\
-	random_utest\
-	randomseq_utest\
-	ratematrix_utest\
-	regexp_utest\
-	rootfinder_utest\
-	scorematrix_utest\
-	sq_utest\
-	sqio_utest\
-	sse_utest\
-	ssi_utest\
-	stack_utest\
-	stats_utest\
-	stretchexp_utest\
-	tree_utest\
-	vectorops_utest\
-	weibull_utest\
-	wuss_utest
-#	gev_utest\
-#	minimizer_utest\
-#	mixgev_utest\
-#	mpi_utest\
-#	normal_utest\
-#	paml_utest\
-#	stopwatch_utest\
-#	swat_utest\
+all: 
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	cd ${ESLDIR}; ${MAKE} easel_progs
+	cd ${ESLDIR}; ${MAKE} easel_utests
 
+check:  
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	cd ${ESLDIR}; ${MAKE} easel_progs
+	cd ${ESLDIR}; ${MAKE} easel_utests
+	${MAKE} run_sqc
 
-all:  ${UNIT_TESTS}
+dev:
+	cd ${ESLDIR}; ${MAKE} easel_lib
+	cd ${ESLDIR}; ${MAKE} easel_progs
+	cd ${ESLDIR}; ${MAKE} easel_utests
 
-.c.o:
-	${CC} -I ${EASELLIB} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -c $<		
+testsuite_progs: 
 
-$(PROGS): %: %.o ../libeasel.a
-	${CC} ${CFLAGS} ${SIMDFLAGS} -o $@ -L ${EASELLIB} $@.o -leasel -lm
-
-# Unit test compilation:
-# 
-# To compile unit tests, we need to construct a command line
-# from module basename, module's testdriver flag, and module's
-# C file. This is accomplished via a complex-looking shell scripture;
-# xref J1/81.
-#   $@           =  driver name            msa_utest
-#   $${BASENAME} =  base module name       msa
-#   $${DFLAG}    =  driver flag            eslMSA_TESTDRIVE
-#   $${DFILE}    =  driver's C file        esl_msa.c
-#
-$(UNIT_TESTS): FORCE
-	@echo Compiling $@ ...
-	@BASENAME=`echo $@ | sed -e 's/_utest//'` ;\
-	DFLAG=`echo $${BASENAME} | sed -e 'y/abcdefghijklmnopqrstuvwxyz/ABCDEFGHIJKLMNOPQRSTUVWXYZ/'`;\
-	DFLAG=esl$${DFLAG}_TESTDRIVE ;\
-	if test $@ = "easel_utest"; then \
-           DFILE=easel.c ;\
-        else \
-           DFILE=esl_$${BASENAME}.c ;\
-        fi;\
-	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -o $@ -I${ESLDIR} -L${ESLDIR} -D$${DFLAG} ${ESLDIR}/$${DFILE} ${MPILIBS} -leasel ${LIBS}
-
-FORCE:
-
-
-check:  ${UNIT_TESTS}
+run_sqc:
 	@echo 
 	@echo Running Easel test suite...
 	@echo
-	@../devkit/sqc 2 testsuite.sqc .
+	@../devkit/sqc 2 testsuite.sqc . ${ESLDIR} ${ESLDIR}/miniapps/
 
-dcheck: ${UNIT_TESTS}
+${PROGS}: %: %.o ${ESLDIR}/libeasel.a
+	${CC} ${CFLAGS} ${SIMDFLAGS} -o $@ -L ${ESLDIR} $@.o -leasel -lm
+
+.c.o:
+	${CC} -I ${ESLDIR} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -c $<		
+
+dcheck: 
 	@echo    Running developer testsuite...
 	@echo -n Running unit tests...
-	@../devkit/sqc 2 testsuite.sqc .  >  utest.report
+	@../devkit/sqc 2 testsuite.sqc . ${ESLDIR} ${ESLDIR}/miniapps/ >  utest.report
 	@echo    done. [See utest.report]
 	@echo -n Testing that all drivers compile...
 	@env CC="${CC}" CFLAGS="${CFLAGS}" ./driver_report.pl       >  driver.report
@@ -132,9 +79,8 @@ clean:
 	-rm -f *.gcno *.gcda *.gcov
 	-rm -f *.o *~ 
 	-rm -f driver.report coverage.report valgrind.report utest.report
-	-rm -f ${UNIT_TESTS}
 	-rm -f ${PROGS} 
 
 distclean:
-	make clean
+	${MAKE} clean
 	rm Makefile
