add esl_sse_any_gt_epi16, esl_sse_hmax_epu8
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@336 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -18,7 +18,7 @@ pdfdir      = @pdfdir@
 #
 CC       = @CC@
 CFLAGS   = @CFLAGS@
-LDFLAGS  = -static @LDFLAGS@
+LDFLAGS  = @LDFLAGS@
 SIMDFLAGS= @SIMD_CFLAGS@
 CPPFLAGS = @CPPFLAGS@
 LIBGSL   = @LIBGSL@
