esl_alphabet's Create unit test now includes coins, dice alphabets. esl_alphabet Dice alphabet wasn't including a * character; now included. esl_hyperexp unit test was showing statistical failures; change to use fixed seed (42).
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@343 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -326,6 +326,7 @@ AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(times)
 AC_CHECK_FUNCS(getpid)
 AC_FUNC_FSEEKO
+AC_FUNC_FSEEKO
 
 # 11. Checks for system services 
 AC_SYS_LARGEFILE
