o Added esl-ssudraw.c, and it now builds with a 'make'. o This version of esl-ssudraw is very nearly identical to svn   revision 544 from my personal my_miniapps svn repository:   https://svn.janelia.org/eddylab/nawrockie/src/my_miniapps
  The only changes to rev 544 were to remove a single argument to
  esl_fileparser_open() calls, for which the function prototype has
  changed since the infernal 1.0 release. 



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/infernal@354 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/1.0/miniapps/Makefile.in
+++ b/1.0/miniapps/Makefile.in
@@ -36,6 +36,7 @@ PROGS = esl-afetch\
 	esl-seqstat\
 	esl-sfetch\
 	esl-shuffle\
+	esl-ssudraw\
 	esl-weight
 
 ## Targets defining how to make miniapp executables.
