Added easel support for a basic threads object.  As part of this, modified the make process, so any files using pthreads will only get built if threading is enabled.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@372 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -85,6 +85,7 @@ HDRS = \
 	esl_stats.h\
 	esl_stopwatch.h\
 	esl_stretchexp.h\
+	esl_threads.h\
 	esl_tree.h\
 	esl_vectorops.h\
 	esl_vmx.h\
@@ -133,6 +134,7 @@ OBJS    = \
 	esl_stopwatch.o\
 	esl_stretchexp.o\
 	esl_swat.o\
+	esl_threads.o\
 	esl_tree.o\
 	esl_vectorops.o\
 	esl_vmx.o\
