--- a/1.0/miniapps/Makefile.in
+++ b/1.0/miniapps/Makefile.in
@@ -29,6 +29,7 @@ ESLINCDIR = -I..
 PROGS = esl-afetch\
 	esl-alimanip\
 	esl-alistat\
+	esl-compalign-rf\
 	esl-compstruct\
 	esl-histplot\
 	esl-reformat\
