git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/infernal@384 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/1.0/miniapps/Makefile.in
+++ b/1.0/miniapps/Makefile.in
@@ -28,9 +28,11 @@ ESLINCDIR = -I..
 #
 PROGS = esl-afetch\
 	esl-alimanip\
+	esl-alimap\
 	esl-alistat\
-	esl-compalign-rf\
+	esl-compalign\
 	esl-compstruct\
+	esl-construct\
 	esl-histplot\
 	esl-reformat\
 	esl-selectn\
