esl_threads_CPUCount() added, to portably determine processor number. Fixes a portability problem on Mac OS/X PowerPC, where _SC_NPROCESSORS_ONLN is not available.
Revised esl_threads in several ways from MSF's version: easel-ified
the error handling; simplified the ESL_THREADS structure and moved it
into .h file. Fixed a race condition in how esl_thread_Started() is
implemented. Added example code. Still need to add unit test code
(based on the example, should be easy) and documentation.

esl_stopwatch now uses POSIX times() to obtain more accurate wall
time.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@385 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/configure.ac
+++ b/configure.ac
@@ -315,7 +315,7 @@ AS_IF([test "x$with_gsl" != xno],
 
 # 6. Checks for header files.
 #    Defines preprocessor symbols like HAVE_UNISTD_H
-AC_CHECK_HEADERS([sys/types.h unistd.h stdint.h inttypes.h])
+AC_CHECK_HEADERS([sys/types.h sys/sysctl.h unistd.h stdint.h inttypes.h])
 
 # altivec.h requires the simd cflags
 # For reasons I don't understand, this needs to come after any other CHECK_HEADERS().
@@ -360,6 +360,8 @@ AC_CHECK_FUNCS(popen)
 AC_CHECK_FUNCS(strcasecmp)
 AC_CHECK_FUNCS(times)
 AC_CHECK_FUNCS(getpid)
+AC_CHECK_FUNCS(sysctl)
+AC_CHECK_FUNCS(sysconf)
 AC_FUNC_FSEEKO
 AC_FUNC_FSEEKO
 
