Fixed makefiles to support both stand alone easel and when easel is a subdirectory, i.e. hmmer.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@390 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -64,7 +64,7 @@ ${PROGS}: @EXEC_DEPENDENCY@  ${ESLDIR}/libeasel.a
 	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -L${ESLDIR} -o $@ $@.o ${LIBS}
 
 .c.o:
-	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I. -I${ESLDIR} -I${srcdir} -I${top_srcdir}/easel -c $<
+	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I. -I${ESLDIR} -I${srcdir} -I${srcdir}/.. -c $<
 
 install:
 	cp ${PROGS} ${DESTDIR}${bindir}/
