--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -39,7 +39,7 @@ PROGS = esl-afetch\
 	esl-seqstat\
 	esl-sfetch\
 	esl-shuffle\
-	esl-ssudraw\
+	esl-ssdraw\
 	esl-weight
 
 ## Targets defining how to make miniapp executables.
