esl_msa.c: o esl_msa_SequenceSubset() now copies stockholm GS and GR annotation   for sequences within the subset being copied.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/branches/infernal@398 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/1.0/Makefile.in
+++ b/1.0/Makefile.in
@@ -262,6 +262,16 @@ supertags:
 # magic SVN for setting keyword ID replacement on a new module foo:
 # svn propset svn:keywords "Id" foo.[ch]
 
+#################################################################
+## For building as a library with an SSU-ALIGN distribution.
+##
+ssu:
+	cp miniapps/esl-alimanip miniapps/ssu-esl-alimanip
+	cp miniapps/esl-seqstat miniapps/ssu-esl-seqstat
+	cp miniapps/esl-sfetch miniapps/ssu-esl-sfetch
+	cp miniapps/esl-ssdraw miniapps/ssu-esl-ssdraw
+	cp miniapps/esl-weight miniapps/ssu-esl-weight
+
 ################################################################
 # @LICENSE@
 ################################################################
