Long overdue merge of changes from infernal 1.0 branch of easel (https://svn.janelia.org/eddylab/eddys/easel/branches/infernal/1.0) back to Easel trunk with command:
> svn merge -r 344:400
  https://svn.janelia.org/eddylab/eddys/easel/branches/infernal/1.0 

Summary of changes (for more details see svn logs 344:400 in 1.0
branch):

esl_msa.c: 
esl_msa_SequenceSubset() now copies unparsed GR and GS annotation.

Makefile.in: 
'make ssu' now creates 'ssu-' prefixed copies of miniapps called
internally by SSU-ALIGN scripts (but not meant to be called directly
by users).

miniapps/esl-construct.c:
New miniapp; creates consensus secondary structure from individual
secondary structures. This was developed for construction of SSU-ALIGN
seed alignment consensus structures from Gutell's (CRW's) individual
structures. 

miniapps/esl-weight.c:
Added -o <s> option for saving output alignment to file <s>.

miniapps/esl-alimanip.c:
Nothing significant added from 1.0 branch. Changes were simply
cleanups of conflicts due to independent development of this file in
the trunk and the 1.0 branch.

miniapps/esl-alimap.c:
New miniapp; 'maps' two alignments containing identical sequences in
identical order. Resulting map gives the most likely mapping of each
column in alignment 1 to its corresponding column in alignment 2. The
returned map maximizes the fraction of residues that are within
corresponding columns using a Needleman-Wunsch like DP algorithm to
align the two alignments. Developed so I could convert Infernal
created SSU alignments into 7682 column Greengenes alignment format
for Phil Hugenholtz. 

miniapps/esl-ssdraw.c:
New miniapp; draws secondary structure diagrams of RNA
alignments. Developed for SSU diagrams but could be used for other
families if a template postscript file is created for them (a
laborious task).

miniapps/esl-compalign.c:
New miniapp; computes the accuracy of a predicted alignment versus a
trusted (correct) one based on the RF annotation of the alignments
b

--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -34,15 +34,19 @@ ESLDIR    = ..
 #
 PROGS = esl-afetch\
 	esl-alimanip\
+	esl-alimap\
 	esl-alistat\
 	esl-cluster\
+	esl-compalign\
 	esl-compstruct\
+	esl-construct\
 	esl-histplot\
 	esl-reformat\
 	esl-selectn\
 	esl-seqstat\
 	esl-sfetch\
 	esl-shuffle\
+	esl-ssdraw\
 	esl-weight
 
 
