Added esl-mask miniapp (masking sequence regions with X's or whatever), with man page and test driver.
Added esl-mask.itest.pl test driver to sqc testsuite. This (adding a
.itest.pl driver, in addition to the requisite .man for each miniapp)
might be a model for future testing of all the miniapps.

Fixed a bug in esl_getopts; character options were segfaulting because
of a bug in validation. (Puzzling that this wasn't caught in unit
testing.)



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@429 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -366,6 +366,7 @@ supertags:
 	etags -a miniapps/*.c miniapps/*.man Makefile.in
 	etags -a ~/src/hmmer/src/*.c ~/src/hmmer/src/*.h 
 	etags -a ~/src/hmmer/src/impl_sse/*.c ~/src/hmmer/src/impl_sse/*.h 
+	etags -a ~/src/hmmer/src/impl_vmx/*.c ~/src/hmmer/src/impl_vmx/*.h 
 	etags -a ~/src/hmmer/Makefile.in ~/src/hmmer/src/Makefile.in 
 	etags -a ~/src/infernal/src/*.c ~/src/infernal/src/*.h 
 	etags -a ~/src/infernal/hmmer/src/*.c ~/src/infernal/hmmer/src/*.h 
