memory leak fixed in esl_msa_Clone().
two unused variables removed in esl_dirichlet unit test.

some edits of VPATH-related stuff in Makefiles that probably (?) has no effect.

edited testsuite.sqc so "make check" works in a remote build directory.

added documentation of sqc's -v (verbose) option.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@440 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -6,9 +6,9 @@
 # SRE, Mon Jun 11 08:19:32 2007 [Janelia]
 # SVN $Id$
 
-srcdir     = @srcdir@
 top_srcdir = @top_srcdir@
-VPATH      = @srcdir@ @top_srcdir@/src
+srcdir     = @srcdir@
+VPATH      = @srcdir@ @top_srcdir@
 
 CC       = @CC@
 CFLAGS   = @CFLAGS@
@@ -57,7 +57,7 @@ ${PROGS}: %: %.o ${ESLDIR}/libeasel.a
 	${CC} ${CFLAGS} ${SIMDFLAGS} -o $@ -L ${ESLDIR} $@.o -leasel -lm
 
 .c.o:
-	${CC} -I ${ESLDIR} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -c $<		
+	${CC} -I ${ESLDIR} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -o $@ -c $<		
 
 dcheck: 
 	@echo    Running developer testsuite...
