--- a/Makefile.in
+++ b/Makefile.in
@@ -2,8 +2,8 @@
 #
 # SVN $Id$
 
-srcdir     = @srcdir@
 top_srcdir = @top_srcdir@
+srcdir     = @srcdir@
 VPATH      = @srcdir@ @top_srcdir@
 
 SHELL       = /bin/sh
@@ -224,7 +224,7 @@ libeasel.a: $(OBJS)
 ${OBJS}: ${HDRS}
 
 .c.o: 
-	${CC} -I. -I${srcdir} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -c $<		
+	${CC} -I. -I${srcdir} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -o $@ -c $<		
 
 
 # Unit test compilation:
