--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -1,8 +1,8 @@
 # Makefile.in for Easel's miniapps
 # SVN $Id$
 
-srcdir     = @srcdir@
 top_srcdir = @top_srcdir@
+srcdir     = @srcdir@
 VPATH      = @srcdir@ @top_srcdir@
 
 SHELL       = /bin/sh
@@ -69,7 +69,7 @@ ${PROGS}: @EXEC_DEPENDENCY@  ${ESLDIR}/libeasel.a
 	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} ${LDFLAGS} -L${ESLDIR} -o $@ $@.o ${LIBS}
 
 .c.o:
-	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I. -I${ESLDIR} -I${srcdir} -I${srcdir}/.. -c $<
+	${CC} ${CFLAGS} ${SIMDFLAGS} ${DEFS} -I. -I${ESLDIR} -I${srcdir} -I${srcdir}/.. -o $@ -c $<
 
 install:
 	cp ${PROGS} ${DESTDIR}${bindir}/
