o 'make ssu' updated to cp esl-alimask to ssu-esl-alimask.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@489 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -383,6 +383,7 @@ supertags:
 ##
 ssu:
 	cp miniapps/esl-alimanip miniapps/ssu-esl-alimanip
+	cp miniapps/esl-alimask miniapps/ssu-esl-alimask
 	cp miniapps/esl-alimerge miniapps/ssu-esl-alimerge
 	cp miniapps/esl-alistat miniapps/ssu-esl-alistat
 	cp miniapps/esl-reformat miniapps/ssu-esl-reformat
