sqc command line simplified; sqc now works much more smoothly when building in a directory other than the original ${top_srcdir}.
All sqc-based "make checks" and .sqc command files must now be
rewritten! I have already rewritten Easel and HMMER; you can use their
testsuite/Makefile.in and testsuite/testsuite.sqc for examples.

The beginning of easel/devkit/sqc documents the new sqc command line
format.

Briefly:

- All the options except -v are gone.

- Instead of providing a whole slew of different paths for finding
  binaries and data files, you provide sqc just two paths: the top
  level build directory (where binaries will be found - files
  generated by configure or make), and the top level source directory
  (where data files are - files unchanged by configure or make). 

  (When using sqc for regression tests, it takes two more arguments,
  for the old build and src directories that it regresses against.)

- In sqc command templates, path substitution is vastly simplified.
  @foo@ is replaced by $builddir/foo  : a "builddir substitution"
  !foo! is replaced by $srcdir/foo    : a "srcdir substitution"

  The main difference now is that all paths must be relative to one of
  these two directory trees. For example, where a .sqc file 
  was previously using @esl-seqstat@ because one of its paths was
  to "easel/miniapps/", you'd now have @easel/miniapps/esl-seqstat@.




git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@503 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/testsuite/Makefile.in
+++ b/testsuite/Makefile.in
@@ -51,7 +51,7 @@ run_sqc:
 	@echo 
 	@echo Running Easel test suite...
 	@echo
-	@${srcdir}/../devkit/sqc -D ${srcdir} 2 ${srcdir}/testsuite.sqc . ${ESLDIR} ${ESLDIR}/miniapps/ ${srcdir}
+	@${srcdir}/../devkit/sqc 2 ${srcdir}/testsuite.sqc .. ${srcdir}/..
 
 ${PROGS}: %: %.o ${ESLDIR}/libeasel.a
 	${CC} ${CFLAGS} ${SIMDFLAGS} -o $@ -L ${ESLDIR} $@.o -leasel -lm
