--- a/miniapps/Makefile.in
+++ b/miniapps/Makefile.in
@@ -35,6 +35,8 @@ ESLDIR    = ..
 PROGS = esl-afetch\
 	esl-alimanip\
 	esl-alimap\
+	esl-alimask\
+	esl-alimerge\
 	esl-alistat\
 	esl-cluster\
 	esl-compalign\
