set svn keywords Id property on files that didn't have it set.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@526 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/Makefile.in
+++ b/Makefile.in
@@ -376,7 +376,8 @@ supertags:
 	etags -a ~/src/infernal/Makefile.in ~/src/infernal/src/Makefile.in 
 
 # magic SVN for setting keyword ID replacement on a new module foo:
-# svn propset svn:keywords "Id" foo.[ch]
+#   grep 'SVN \$Id\$' *.[ch]
+#   svn propset svn:keywords "Id" foo.[ch]
 
 #################################################################
 ## For building as a library with an SSU-ALIGN distribution.
